--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,6 +175,23 @@ border-top-left-radius: 0;
     visibility: hidden;
 }
 
+/* PAGINATION CUSTOM */
+.pagination > li:last-child > a, .pagination > li:last-child > span {
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.pagination > li > a, .pagination > li > span {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    color: #428bca;
+    float: left;
+    line-height: 1.42857;
+    margin-left: -1px;
+    padding: 6px 12px;
+    position: relative;
+    text-decoration: none;
+}
+
 /* IMAGE URL CUSTOM */
 #id_path{
     width: 400px;
