--- a/templates/analyses/cases/_thum_image.html
+++ b/templates/analyses/cases/_thum_image.html
@@ -8,7 +8,7 @@
                 {% for image in images %}
                     <li>
                         {% if image.thumb_id %}
-                            <a href="{% url "analyses.views.image" image.image_id %}" title="{{ image.file_name }}">
+                            <a href="{% url "analyses.views.show_analysis" image.id %}" title="{{ image.file_name }}">
                                 <img src="{% url "analyses.views.image" image.thumb_id %}" />
                             </a>
                             <div class="tags">
@@ -29,13 +29,13 @@
                                 {% endif %}
                             </div>
                             <div class="icns">
-                                <a href="{% url "analyses.views.show_analysis" image.id %}" title="Show report"> <i class="icon icon-list-alt"> </i></a>
+                                <a href="{% url "analyses.views.image" image.image_id %}"  title="Save image"> <i class="icon icon-save"></i></a>
                                 {% if image.favorites.all %}
-                                    <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite btn-warning star{{image.id}}" title="Un-set as favorite"> <i class="icon icon-star"> </i></a>
+                                    <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite btn-warning star{{image.id}}" title="Un-set as favorite"> <i class="icon icon-star"></i></a>
                                 {% else %}
-                                    <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite star{{image.id}}" title="Set as favorite"> <i class="icon icon-star"> </i></a>
+                                    <a id="{% url "analyses.views.favorite" image.id %}" rel="{{ image.id }}" class="favorite star{{image.id}}" title="Set as favorite"> <i class="icon icon-star"></i></a>
                                 {% endif %}
-                                <a class="fancybox" href="{% url "analyses.views.image" image.image_id %}" title="View image: {{ image.file_name }}"><i class="icon icon-camera"> </i></a>
+                                <a class="fancybox" href="{% url "analyses.views.image" image.image_id %}" title="View image: {{ image.file_name }}"><i class="icon icon-camera"></i></a>
                             </div>
                         {% else %}
                             <img src="{{ STATIC_URL }}img/no_image_large.jpg" />
