--- a/templates/analyses/images/index.html
+++ b/templates/analyses/images/index.html
@@ -28,6 +28,9 @@
                             <a href="{% url "analyses.views.list_images" "thumb" %}">Thumbnails</a>
                         </li>
                     {% endif %}
+                    <li {% if pagename == "nude" %} class="active" {% endif %}>
+                        <a href="{% url "analyses.views.list_images" "nude" %}">Nude detection</a>
+                    </li>
                     <li {% if pagename == "map" %} class="active" {% endif %}>
                         <a href="{% url "analyses.views.list_images" "map" %}">Map</a>
                     </li>
@@ -65,8 +68,8 @@
                 {% elif pagename == "thumb" %}
                     {% include "analyses/cases/_thum_image.html" %}
                     <div id="DataTables_Table_0_paginate" class="dataTables_paginate paging_bs_normal">
-                        <ul class="pagination pull-right">
-                            {% if images %}
+                        {% if images %}
+                            <ul class="pagination pull-right">
                                 {% if images.has_previous %}
                                     <li class="prev">
                                         <a href="{% url "analyses.views.list_images" "thumb" %}?page={{ images.previous_page_number }}">
@@ -83,16 +86,48 @@
                                         </a>
                                     </li>
                                 {% endif %}
-                            {% else %}
-                                <div class="alert alert-info">
-                                    <strong>Info!</strong>
-                                    There are not any photos
-                                </div>
-                            {% endif %}
-                        </ul>
-                        <div class="pull-left">
-                            <div id="DataTables_Table_0_info" class="dataTables_info" role="status" aria-live="polite">Showing {{ images.number }} to {{ images.paginator.num_pages }}</div>
-                        </div>
+                            </ul>
+                            <div class="pull-left">
+                                <div id="DataTables_Table_0_info" class="dataTables_info" role="status" aria-live="polite">Showing {{ images.number }} to {{ images.paginator.num_pages }}</div>
+                            </div>
+                        {% else %}
+                            <div class="alert alert-info">
+                                <strong>Info!</strong>
+                                There are not any photos
+                            </div>
+                        {% endif %}
+                    </div>
+                {% elif pagename == "nude" %}
+                    {% include "analyses/cases/_thum_image.html" %}
+                    <div id="DataTables_Table_0_paginate" class="dataTables_paginate paging_bs_normal">
+                        {% if images %}
+                            <ul class="pagination pull-right">
+                                {% if images.has_previous %}
+                                    <li class="prev">
+                                        <a href="{% url "analyses.views.list_images" "nude" %}?page={{ images.previous_page_number }}">
+                                            <span class="glyphicon glyphicon-chevron-left"></span>
+                                            Previous
+                                        </a>
+                                    </li>
+                                {% endif %}
+                                {% if images.has_next %}
+                                    <li class="next">
+                                        <a href="{% url "analyses.views.list_images" "nude" %}?page={{ images.next_page_number }}">
+                                            Next
+                                            <span class="glyphicon glyphicon-chevron-right"></span>
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                            <div class="pull-left">
+                                <div id="DataTables_Table_0_info" class="dataTables_info" role="status" aria-live="polite">Showing {{ images.number }} to {{ images.paginator.num_pages }}</div>
+                            </div>
+                        {% else %}
+                            <div class="alert alert-info">
+                                <strong>Info!</strong>
+                                There are not any photos
+                            </div>
+                        {% endif %}
                     </div>
                 {% elif pagename == "map" %}
                     {% include "analyses/cases/_map_image.html" %}
@@ -102,21 +137,5 @@
             </div>
         </div>
     </div>
-    <style>
-.pagination > li:last-child > a, .pagination > li:last-child > span {
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
-}
-.pagination > li > a, .pagination > li > span {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    color: #428bca;
-    float: left;
-    line-height: 1.42857;
-    margin-left: -1px;
-    padding: 6px 12px;
-    position: relative;
-    text-decoration: none;
-}
-    </style>
+
 {% endblock %}
