--- a/templates/analyses/report/_staticEla.html
+++ b/templates/analyses/report/_staticEla.html
@@ -2,6 +2,6 @@
 {% if embed %}
     <img src="{{ analysis.report.ela.ela_image|to_base64 }}" />
 {% elif analysis.report.ela.ela_image %}
-    <img src="{% url "analyses.views.image" analysis.report.ela.ela_image %}" />
+    <img src="{% url "analyses.views.image" analysis.report.ela.ela_image %}" /><br>
     Max difference: <span class="label label-info label-round">{{ analysis.report.ela.max_difference }}</span>
 {% endif %}
