--- a/templates/analyses/report/_staticHashes.html
+++ b/templates/analyses/report/_staticHashes.html
@@ -18,44 +18,46 @@
     </tbody>
 </table>
 <br>
-<table class="table">
-    <thead>
-        <th colspan="3" style="background-color: #AFD5EA">Image Hash</th>
-    </thead>
-    <thead>
-        <th>Type</th>
-        <th>Value</th>
-    </thead>
-    <tbody>
-        {% if analysis.report.imghash.d_hash %}
-            <tr colspan="2">
-                <td>
-                    <b>Difference hashing</b>
-                </td>
-                <td>
-                    {{ analysis.report.imghash.d_hash }}
-                </td>
-            </tr>
-        {% endif %}
-        {% if analysis.report.imghash.a_hash %}
-            <tr colspan="2">
-                <td>
-                    <b>Average hashing</b>
-                </td>
-                <td>
-                    {{ analysis.report.imghash.a_hash }}
-                </td>
-            </tr>
-        {% endif %}
-        {% if analysis.report.imghash.p_hash %}
-            <tr colspan="2">
-                <td>
-                    <b>Perception hashing</b>
-                </td>
-                <td>
-                    {{ analysis.report.imghash.p_hash }}
-                </td>
-            </tr>
-        {% endif %}
-    </tbody>
-</table>
+{% if analysis.report.imghash.d_hash or analysis.report.imghash.a_hash or analysis.report.imghash.p_hash %}
+    <table class="table">
+        <thead>
+            <th colspan="3" style="background-color: #AFD5EA">Image Hash</th>
+        </thead>
+        <thead>
+            <th>Type</th>
+            <th>Value</th>
+        </thead>
+        <tbody>
+            {% if analysis.report.imghash.d_hash %}
+                <tr colspan="2">
+                    <td>
+                        <b>Difference hashing</b>
+                    </td>
+                    <td>
+                        {{ analysis.report.imghash.d_hash }}
+                    </td>
+                </tr>
+            {% endif %}
+            {% if analysis.report.imghash.a_hash %}
+                <tr colspan="2">
+                    <td>
+                        <b>Average hashing</b>
+                    </td>
+                    <td>
+                        {{ analysis.report.imghash.a_hash }}
+                    </td>
+                </tr>
+            {% endif %}
+            {% if analysis.report.imghash.p_hash %}
+                <tr colspan="2">
+                    <td>
+                        <b>Perception hashing</b>
+                    </td>
+                    <td>
+                        {{ analysis.report.imghash.p_hash }}
+                    </td>
+                </tr>
+            {% endif %}
+        </tbody>
+    </table>
+{% endif %}
