--- a/templates/hashes/index.html
+++ b/templates/hashes/index.html
@@ -54,11 +54,11 @@
                                             <td>
                                                 <div class="btn-group">
                                                     {% if request.user == list.owner or request.user.is_superuser %}
-                                                        <a class="btn btn-danger btn-trash tool" href="#trash" role="button" data-toggle="modal" id="{% url "hashes.views.delete_hashes" list.id %}" title="Delete list">
+                                                        <a class="btn btn-danger btn-trash" data-tooltip="tooltip"  title="Delete" href="#trash" role="button" data-toggle="modal" id="{% url "hashes.views.delete_hashes" list.id %}">
                                                             <span class="glyphicon glyphicon-trash"></span>
                                                         </a>
                                                     {% else %}
-                                                        <a class="btn btn-danger tool" title="You are not authorized to delete this" disabled="disabled">
+                                                        <a class="btn btn-danger" title="You are not authorized to delete this" disabled="disabled">
                                                             <span class="glyphicon glyphicon-trash"></span>
                                                         </a>
                                                     {% endif %}
@@ -105,26 +105,22 @@
         </div>
     </div>
 
-    <div id="trash" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                ×
-            </button>
-            <h3>Delete hash list</h3>
-        </div>
-        <div class="modal-body">
-            <p>
-                This <b>permanently</b> deletes the selected hash list.
-                Are you sure continue?
-            </p>
-        </div>
-        <div class="modal-footer">
-            <a class="btn btn-danger" id="id">
-                Delete
-            </a>
-            <button class="btn" data-dismiss="modal" aria-hidden="true">
-                Cancel
-            </button>
+    <div class="modal fade" id="trash" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Delete hash list</h4>
+                </div>
+                <div class="modal-body">
+                    This <b>permanently</b> deletes the selected hash list.
+                    Are you sure continue?
+                </div>
+                <div class="modal-footer">
+                    <a type="button" class="btn btn-danger" id="id">Delete</a>
+                    <a type="button" class="btn btn-default" data-dismiss="modal">Cancel</a>
+                </div>
+            </div>
         </div>
     </div>
 
