Added context processor for release in footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
         {% block content %}{% endblock %}
     </div>
     <div id="footer">
-        <small class="pull-right"><strong>Ghiro 0.3-dev</strong> - &copy; With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="http://twitter.com/burloneM" target="_blank">burlone</a>. <a href="http://getghiro.org" id="newVersionFooter" target="_blank" class="hidden"><span class="label label-success">New version available</span></a></small>
+        <small class="pull-right"><strong>Ghiro {{ ghiro_release }}</strong> - &copy; With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="http://twitter.com/burloneM" target="_blank">burlone</a>. <a href="http://getghiro.org" id="newVersionFooter" target="_blank" class="hidden"><span class="label label-success">New version available</span></a></small>
     </div>
 </body>
 </html>
