--- a/templates/base_index.html
+++ b/templates/base_index.html
@@ -105,7 +105,7 @@
         </section>
         <footer class="footer">
             <div class="col-md-6">
-                Ghiro 0.3-dev - &copy; With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="http://twitter.com/burloneM" target="_blank">burlone</a>.
+                Ghiro {{ ghiro_release }} - &copy; With poetry, <a href="http://twitter.com/jekil" target="_blank">jekil</a> and <a href="http://twitter.com/burloneM" target="_blank">burlone</a>.
             </div>
         </footer>
     </body>
