No internet connection bugfixed

--- a/templates/analyses/cases/_map_image.html
+++ b/templates/analyses/cases/_map_image.html
@@ -1,10 +1,10 @@
 {% load analyses_tags %}
 
-<div class="alert hide" id="noNet">
+<div class="alert alert-info box hidden" id="noNet">
     <strong>Warning!</strong> To use the map feature you need to be connected to internet.
 </div>
 
-<div class="box">
+<div class="box maps">
     <div class="wdgt-header">Image geolocalization
         <span style="float:right; position:relative; top:-2px; right:-2px;">
             <div class="btn-group">
