--- a/templates/analyses/report/_staticMap.html
+++ b/templates/analyses/report/_staticMap.html
@@ -1,8 +1,8 @@
-<div class="alert hide" id="noNet">
+<div class="alert alert-info box hidden" id="noNet">
     <strong>Warning!</strong> To use the map feature you need to be connected to internet.
 </div>
 
-<div class="box">
+<div class="box maps">
     <div class="wdgt-header">Image geolocalization</div>
     <div class="wdgt-body wdgt-map" style="padding-bottom:10px;height:600px;">
         <div id="map-canvas"></div>
