--- a/templates/analyses/report/show.html
+++ b/templates/analyses/report/show.html
@@ -27,7 +27,7 @@
 
     <div class="content">
         <div class="page-h1">
-            <h1>Case: <small>
+            <h1>Case <small>
                 {% if analysis.case.name|length > 70 %}
                     {{ analysis.case.name|slice:":70" }} ...
                 {% else %}
