Modified warning alert for no signature matched

--- a/templates/analyses/report/_dashboard.html
+++ b/templates/analyses/report/_dashboard.html
@@ -108,7 +108,7 @@
                     </script>
 
                     {% else %}
-                    <div class="alert">
+                    <div class="alert alert-info">
                         <strong>Warning!</strong> No signature matched.
                     </div>
                     {% endif %}
