Signature table layout modified

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2199,6 +2199,7 @@ fieldset[disabled] .btn-link:focus {
 
 .panel{ margin-bottom: -12px; }
 .panel, .panel-heading, .panel-title { border-radius:0px !important;}
+.panel-heading {padding-bottom: 23px;}
 .panel-title > a { text-decoration:none; font-size:14px; }
 .panel-title > a:focus { outline-width:0px !important; }
 
@@ -2236,7 +2237,7 @@ fieldset[disabled] .btn-link:focus {
 .nav-pills.nav-bright > li > a:hover, .nav-pills.nav-bright > li.active > a { background: #CC99CC; color:#666666;}
 
 .panel-default {border-color: #E6E6E6;}
-.panel-default > .panel-heading {color: #666666;background-color: #E6E6E6;border-color: #E6E6E6;}
+.panel-default > .panel-heading {color: #666666;background-color: #FFF;border-color: #E6E6E6;}
 .panel-default > .panel-heading + .panel-collapse .panel-body {border-top-color: #E6E6E6;}
 .panel-default > .panel-footer + .panel-collapse .panel-body {border-bottom-color: #E6E6E6;}
 .panel-primary {border-color: #7BAEDA;}
