--- a/templates/analyses/report/_similarity.html
+++ b/templates/analyses/report/_similarity.html
@@ -1,13 +1,69 @@
+{% load analyses_tags %}
+
 <div class="box">
     <ul class="nav nav-pills" id="tab-stat">
         <li class="active">
-            <a data-toggle="tab" href="#system-preview">Previews</a>
+            <a data-toggle="tab" href="#ahash">Average Hash</a>
+        </li>
+        <li>
+            <a data-toggle="tab" href="#phash">Perception Hash</a>
+        </li>
+        <li>
+            <a data-toggle="tab" href="#dhash">Difference Hash</a>
         </li>
     </ul>
     <div class="box">
         <div class="tab-content">
-            <div class="tab-pane fade in active" id="system-preview">
-                {% include 'analyses/report/_staticPreviews.html' %}
+            <div class="tab-pane fade in active" id="ahash">
+                <div class="box">
+                    <table>
+                        <tr>
+                            <td>
+                                <ul class="thumbnails">
+                                    {% for image_id in analysis.report.similar.a_hash %}
+                                        {% include "analyses/report/_similarity_images.html" with image=image_id|get_analysis %}
+                                    {% endfor %}
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                </div> 
+            </div>
+        </div>
+
+        <div class="tab-content">
+            <div class="tab-pane fade in active" id="phash">
+                <div class="box">
+                    <table>
+                        <tr>
+                            <td>
+                                <ul class="thumbnails">
+                                    {% for image_id in analysis.report.similar.p_hash %}
+                                        {% include "analyses/report/_similarity_images.html" with image=image_id|get_analysis %}
+                                    {% endfor %}
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                </div> 
+            </div>
+        </div>
+
+        <div class="tab-content">
+            <div class="tab-pane fade in active" id="dhash">
+                <div class="box">
+                    <table>
+                        <tr>
+                            <td>
+                                <ul class="thumbnails">
+                                    {% for image_id in analysis.report.similar.d_hash %}
+                                        {% include "analyses/report/_similarity_images.html" with image=image_id|get_analysis %}
+                                    {% endfor %}
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                </div> 
             </div>
         </div>
     </div>
