--- a/templates/analyses/report/_similarity.html
+++ b/templates/analyses/report/_similarity.html
@@ -1,68 +1,76 @@
 {% load analyses_tags %}
 
 <div class="box">
-    <ul class="nav nav-pills" id="tab-stat">
-        <li class="active">
+    <ul class="nav nav-pills" role="tablist" id="tab-stat">
+        <li class="active" role="presentation" >
             <a data-toggle="tab" href="#ahash">Average Hash</a>
         </li>
-        <li>
+        <li role="presentation" >
             <a data-toggle="tab" href="#phash">Perception Hash</a>
         </li>
-        <li>
+        <li role="presentation">
             <a data-toggle="tab" href="#dhash">Difference Hash</a>
         </li>
     </ul>
     <div class="box">
         <div class="tab-content">
-            <div class="tab-pane fade in active" id="ahash">
+            <div class="tab-pane fade in active" role="tabpanel" id="ahash">
                 <div class="box">
-                    <table>
-                        <tr>
-                            <td>
-                                <ul class="thumbnails">
-                                    {% for image_id in analysis.report.similar.a_hash %}
-                                        {% include "analyses/report/_similarity_images.html" with image=image_id|get_analysis %}
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                        </tr>
-                    </table>
+                    {% if analysis.report.similar.a_hash %}
+                        <table>
+                            <tr>
+                                <td>
+                                    <ul class="thumbnails">
+                                        {% for image_id in analysis.report.similar.a_hash %}
+                                            {% include "analyses/report/_similarity_images.html" with image=image_id|get_analysis %}
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                            </tr>
+                        </table>
+                    {% else %}
+                        <div class="alert alert-warning" role="alert"><strong>Not found!</strong> No similar images found using average hashing method.</div>
+                    {% endif %}
                 </div> 
             </div>
-        </div>
 
-        <div class="tab-content">
-            <div class="tab-pane fade in active" id="phash">
+            <div class="tab-pane fade" role="tabpanel" id="phash">
                 <div class="box">
-                    <table>
-                        <tr>
-                            <td>
-                                <ul class="thumbnails">
-                                    {% for image_id in analysis.report.similar.p_hash %}
-                                        {% include "analyses/report/_similarity_images.html" with image=image_id|get_analysis %}
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                        </tr>
-                    </table>
+                    {% if analysis.report.similar.p_hash %}
+                        <table>
+                            <tr>
+                                <td>
+                                    <ul class="thumbnails">
+                                        {% for image_id in analysis.report.similar.p_hash %}
+                                            {% include "analyses/report/_similarity_images.html" with image=image_id|get_analysis %}
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                            </tr>
+                        </table>
+                    {% else %}
+                        <div class="alert alert-warning" role="alert"><strong>Not found!</strong> No similar images found using perceptual hashing method.</div>
+                    {% endif %}
                 </div> 
             </div>
-        </div>
 
-        <div class="tab-content">
-            <div class="tab-pane fade in active" id="dhash">
+            <div class="tab-pane fade" role="tabpanel" id="dhash">
                 <div class="box">
-                    <table>
-                        <tr>
-                            <td>
-                                <ul class="thumbnails">
-                                    {% for image_id in analysis.report.similar.d_hash %}
-                                        {% include "analyses/report/_similarity_images.html" with image=image_id|get_analysis %}
-                                    {% endfor %}
-                                </ul>
-                            </td>
-                        </tr>
-                    </table>
+                    {% if analysis.report.similar.d_hash %}
+                        <table>
+                            <tr>
+                                <td>
+                                    <ul class="thumbnails">
+                                        {% for image_id in analysis.report.similar.d_hash %}
+                                            {% include "analyses/report/_similarity_images.html" with image=image_id|get_analysis %}
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                            </tr>
+                        </table>
+                    {% else %}
+                        <div class="alert alert-warning" role="alert"><strong>Not found!</strong> No similar images found using difference hashing method.</div>
+                    {% endif %}
                 </div> 
             </div>
         </div>
