--- a/templates/analyses/images/index.html
+++ b/templates/analyses/images/index.html
@@ -124,8 +124,8 @@
                             </div>
                         {% else %}
                             <div class="alert alert-info">
-                                <strong>Info!</strong>
-                                There are not any photos
+                                <strong>Not found!</strong>
+                                No nudity images found.
                             </div>
                         {% endif %}
                     </div>
