--- a/templates/analyses/report/_staticInfo.html
+++ b/templates/analyses/report/_staticInfo.html
@@ -57,7 +57,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><b>Message: </b>{{ analysis.report.nude.nudepy.msg }}</td>
+                            <td><b>Details: </b>{{ analysis.report.nude.nudepy.msg }}</td>
                         </tr>
                     {% endif %}
         </tbody>
