Fixed Marco's engrisch

--- a/templates/analyses/images/index.html
+++ b/templates/analyses/images/index.html
@@ -93,7 +93,7 @@
                         {% else %}
                             <div class="alert alert-info">
                                 <strong>Info!</strong>
-                                There are not any photos
+                                No matching images found.
                             </div>
                         {% endif %}
                     </div>
