--- a/templates/analyses/cases/_tbl_case.html
+++ b/templates/analyses/cases/_tbl_case.html
@@ -361,7 +361,7 @@
             {% else %}
                 <div class="alert alert-info">
                     <strong>Info!</strong>
-                    There are not any photos
+                    No matching images found.
                 </div>
             {% endif %}
     {% elif pagename == "nude" %}
@@ -392,7 +392,7 @@
             {% else %}
                 <div class="alert alert-info">
                     <strong>Info!</strong>
-                    There are not any photos
+                    No matching images found.
                 </div>
             {% endif %}
     {% elif pagename == "map" %}
